# rust-fil-proofs

./: Cargo.toml
storage-proofs-porep/src/stacked/vanilla/: proof.rs
storage-proofs-porep/tests/: stacked_circuit.rs
