[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
  "storage-proofs-update",
]

[patch.crates-io]
ec-gpu-gen = { git = "https://github.com/filecoin-project/ec-gpu", branch = "multiexp-calc2" }
bellperson = { git = "https://github.com/filecoin-project/bellperson", branch = "vmx-64gib-debug-cpu-compare" }
